parser/tdtl_parser.go
// Generated from TDTL.g4 by ANTLR 4.7.

package parser // TDTL

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "','", "'('", "')'", "'\"'", "'['", "']'", "'#'", "'[]'", "'[#]'",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "'*'", "'/'", "'%'", "'+'", "'-'", "'.'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "INSERT", "INTO", "AS", "AND",
	"CASE", "ELSE", "END", "EQ", "FROM", "GT", "GTE", "LT", "LTE", "NE", "NOT",
	"NULL", "OR", "SELECT", "THEN", "WHERE", "WHEN", "MUL", "DIV", "MOD", "ADD",
	"SUB", "DOT", "TRUE", "FALSE", "INDENTIFIER", "NUMBER", "INTEGER", "FLOAT",
	"TOPICITEM", "PATHITEM", "ARRAYITEM", "STRING", "WHITESPACE",
}

var ruleNames = []string{
	"root", "target", "fields", "field_elem", "field_elem_with_as", "filter",
	"filter_condition", "filter_condition_or", "filter_condition_not", "expr",
	"sourceEntity", "propertyEntity", "constant", "switch_stmt", "call_expr",
	"asterisk", "xpath_name", "target_name", "dotnotation", "identifierWithTOPICITEM",
	"identifierWithQualifier",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type TDTLParser struct {
	*antlr.BaseParser
}

func NewTDTLParser(input antlr.TokenStream) *TDTLParser {
	this := new(TDTLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "TDTL.g4"

	return this
}

// TDTLParser tokens.
const (
	TDTLParserEOF         = antlr.TokenEOF
	TDTLParserT__0        = 1
	TDTLParserT__1        = 2
	TDTLParserT__2        = 3
	TDTLParserT__3        = 4
	TDTLParserT__4        = 5
	TDTLParserT__5        = 6
	TDTLParserT__6        = 7
	TDTLParserT__7        = 8
	TDTLParserT__8        = 9
	TDTLParserINSERT      = 10
	TDTLParserINTO        = 11
	TDTLParserAS          = 12
	TDTLParserAND         = 13
	TDTLParserCASE        = 14
	TDTLParserELSE        = 15
	TDTLParserEND         = 16
	TDTLParserEQ          = 17
	TDTLParserFROM        = 18
	TDTLParserGT          = 19
	TDTLParserGTE         = 20
	TDTLParserLT          = 21
	TDTLParserLTE         = 22
	TDTLParserNE          = 23
	TDTLParserNOT         = 24
	TDTLParserNULL        = 25
	TDTLParserOR          = 26
	TDTLParserSELECT      = 27
	TDTLParserTHEN        = 28
	TDTLParserWHERE       = 29
	TDTLParserWHEN        = 30
	TDTLParserMUL         = 31
	TDTLParserDIV         = 32
	TDTLParserMOD         = 33
	TDTLParserADD         = 34
	TDTLParserSUB         = 35
	TDTLParserDOT         = 36
	TDTLParserTRUE        = 37
	TDTLParserFALSE       = 38
	TDTLParserINDENTIFIER = 39
	TDTLParserNUMBER      = 40
	TDTLParserINTEGER     = 41
	TDTLParserFLOAT       = 42
	TDTLParserTOPICITEM   = 43
	TDTLParserPATHITEM    = 44
	TDTLParserARRAYITEM   = 45
	TDTLParserSTRING      = 46
	TDTLParserWHITESPACE  = 47
)

// TDTLParser rules.
const (
	TDTLParserRULE_root                    = 0
	TDTLParserRULE_target                  = 1
	TDTLParserRULE_fields                  = 2
	TDTLParserRULE_field_elem              = 3
	TDTLParserRULE_field_elem_with_as      = 4
	TDTLParserRULE_filter                  = 5
	TDTLParserRULE_filter_condition        = 6
	TDTLParserRULE_filter_condition_or     = 7
	TDTLParserRULE_filter_condition_not    = 8
	TDTLParserRULE_expr                    = 9
	TDTLParserRULE_sourceEntity            = 10
	TDTLParserRULE_propertyEntity          = 11
	TDTLParserRULE_constant                = 12
	TDTLParserRULE_switch_stmt             = 13
	TDTLParserRULE_call_expr               = 14
	TDTLParserRULE_asterisk                = 15
	TDTLParserRULE_xpath_name              = 16
	TDTLParserRULE_target_name             = 17
	TDTLParserRULE_dotnotation             = 18
	TDTLParserRULE_identifierWithTOPICITEM = 19
	TDTLParserRULE_identifierWithQualifier = 20
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TDTLParserRULE_root
	return p
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TDTLParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) INSERT() antlr.TerminalNode {
	return s.GetToken(TDTLParserINSERT, 0)
}

func (s *RootContext) INTO() antlr.TerminalNode {
	return s.GetToken(TDTLParserINTO, 0)
}

func (s *RootContext) Target() ITargetContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITargetContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITargetContext)
}

func (s *RootContext) SELECT() antlr.TerminalNode {
	return s.GetToken(TDTLParserSELECT, 0)
}

func (s *RootContext) Fields() IFieldsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFieldsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFieldsContext)
}

func (s *RootContext) EOF() antlr.TerminalNode {
	return s.GetToken(TDTLParserEOF, 0)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.EnterRoot(s)
	}
}

func (s *RootContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.ExitRoot(s)
	}
}

func (p *TDTLParser) Root() (localctx IRootContext) {
	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TDTLParserRULE_root)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(TDTLParserINSERT)
	}
	{
		p.SetState(43)
		p.Match(TDTLParserINTO)
	}
	{
		p.SetState(44)
		p.Target()
	}
	{
		p.SetState(45)
		p.Match(TDTLParserSELECT)
	}
	{
		p.SetState(46)
		p.Fields()
	}
	{
		p.SetState(47)
		p.Match(TDTLParserEOF)
	}

	return localctx
}

// ITargetContext is an interface to support dynamic dispatch.
type ITargetContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTargetContext differentiates from other interfaces.
	IsTargetContext()
}

type TargetContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTargetContext() *TargetContext {
	var p = new(TargetContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TDTLParserRULE_target
	return p
}

func (*TargetContext) IsTargetContext() {}

func NewTargetContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TargetContext {
	var p = new(TargetContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TDTLParserRULE_target

	return p
}

func (s *TargetContext) GetParser() antlr.Parser { return s.parser }

func (s *TargetContext) INDENTIFIER() antlr.TerminalNode {
	return s.GetToken(TDTLParserINDENTIFIER, 0)
}

func (s *TargetContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TargetContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TargetContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.EnterTarget(s)
	}
}

func (s *TargetContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.ExitTarget(s)
	}
}

func (p *TDTLParser) Target() (localctx ITargetContext) {
	localctx = NewTargetContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TDTLParserRULE_target)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(49)
		p.Match(TDTLParserINDENTIFIER)
	}

	return localctx
}

// IFieldsContext is an interface to support dynamic dispatch.
type IFieldsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFieldsContext differentiates from other interfaces.
	IsFieldsContext()
}

type FieldsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldsContext() *FieldsContext {
	var p = new(FieldsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TDTLParserRULE_fields
	return p
}

func (*FieldsContext) IsFieldsContext() {}

func NewFieldsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldsContext {
	var p = new(FieldsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TDTLParserRULE_fields

	return p
}

func (s *FieldsContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldsContext) AllField_elem() []IField_elemContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IField_elemContext)(nil)).Elem())
	var tst = make([]IField_elemContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IField_elemContext)
		}
	}

	return tst
}

func (s *FieldsContext) Field_elem(i int) IField_elemContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IField_elemContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IField_elemContext)
}

func (s *FieldsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.EnterFields(s)
	}
}

func (s *FieldsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.ExitFields(s)
	}
}

func (p *TDTLParser) Fields() (localctx IFieldsContext) {
	localctx = NewFieldsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TDTLParserRULE_fields)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Field_elem()
	}
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == TDTLParserT__0 {
		{
			p.SetState(52)
			p.Match(TDTLParserT__0)
		}
		{
			p.SetState(53)
			p.Field_elem()
		}

		p.SetState(58)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IField_elemContext is an interface to support dynamic dispatch.
type IField_elemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsField_elemContext differentiates from other interfaces.
	IsField_elemContext()
}

type Field_elemContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyField_elemContext() *Field_elemContext {
	var p = new(Field_elemContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TDTLParserRULE_field_elem
	return p
}

func (*Field_elemContext) IsField_elemContext() {}

func NewField_elemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Field_elemContext {
	var p = new(Field_elemContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TDTLParserRULE_field_elem

	return p
}

func (s *Field_elemContext) GetParser() antlr.Parser { return s.parser }

func (s *Field_elemContext) CopyFrom(ctx *Field_elemContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *Field_elemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Field_elemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type FieldElemExprContext struct {
	*Field_elemContext
}

func NewFieldElemExprContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FieldElemExprContext {
	var p = new(FieldElemExprContext)

	p.Field_elemContext = NewEmptyField_elemContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Field_elemContext))

	return p
}

func (s *FieldElemExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldElemExprContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *FieldElemExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.EnterFieldElemExpr(s)
	}
}

func (s *FieldElemExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.ExitFieldElemExpr(s)
	}
}

type FieldElemSourceContext struct {
	*Field_elemContext
}

func NewFieldElemSourceContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FieldElemSourceContext {
	var p = new(FieldElemSourceContext)

	p.Field_elemContext = NewEmptyField_elemContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Field_elemContext))

	return p
}

func (s *FieldElemSourceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldElemSourceContext) SourceEntity() ISourceEntityContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISourceEntityContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISourceEntityContext)
}

func (s *FieldElemSourceContext) Asterisk() IAsteriskContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAsteriskContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAsteriskContext)
}

func (s *FieldElemSourceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.EnterFieldElemSource(s)
	}
}

func (s *FieldElemSourceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.ExitFieldElemSource(s)
	}
}

type FieldElemAsContext struct {
	*Field_elemContext
}

func NewFieldElemAsContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FieldElemAsContext {
	var p = new(FieldElemAsContext)

	p.Field_elemContext = NewEmptyField_elemContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Field_elemContext))

	return p
}

func (s *FieldElemAsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldElemAsContext) Field_elem_with_as() IField_elem_with_asContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IField_elem_with_asContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IField_elem_with_asContext)
}

func (s *FieldElemAsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.EnterFieldElemAs(s)
	}
}

func (s *FieldElemAsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.ExitFieldElemAs(s)
	}
}

func (p *TDTLParser) Field_elem() (localctx IField_elemContext) {
	localctx = NewField_elemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TDTLParserRULE_field_elem)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		localctx = NewFieldElemAsContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(59)
			p.Field_elem_with_as()
		}

	case 2:
		localctx = NewFieldElemSourceContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(60)
			p.SourceEntity()
		}
		{
			p.SetState(61)
			p.Match(TDTLParserDOT)
		}
		{
			p.SetState(62)
			p.Asterisk()
		}

	case 3:
		localctx = NewFieldElemExprContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(64)
			p.expr(0)
		}

	}

	return localctx
}

// IField_elem_with_asContext is an interface to support dynamic dispatch.
type IField_elem_with_asContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsField_elem_with_asContext differentiates from other interfaces.
	IsField_elem_with_asContext()
}

type Field_elem_with_asContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyField_elem_with_asContext() *Field_elem_with_asContext {
	var p = new(Field_elem_with_asContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TDTLParserRULE_field_elem_with_as
	return p
}

func (*Field_elem_with_asContext) IsField_elem_with_asContext() {}

func NewField_elem_with_asContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Field_elem_with_asContext {
	var p = new(Field_elem_with_asContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TDTLParserRULE_field_elem_with_as

	return p
}

func (s *Field_elem_with_asContext) GetParser() antlr.Parser { return s.parser }

func (s *Field_elem_with_asContext) CopyFrom(ctx *Field_elem_with_asContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *Field_elem_with_asContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Field_elem_with_asContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type TargetAsElemContext struct {
	*Field_elem_with_asContext
}

func NewTargetAsElemContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *TargetAsElemContext {
	var p = new(TargetAsElemContext)

	p.Field_elem_with_asContext = NewEmptyField_elem_with_asContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Field_elem_with_asContext))

	return p
}

func (s *TargetAsElemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TargetAsElemContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *TargetAsElemContext) AS() antlr.TerminalNode {
	return s.GetToken(TDTLParserAS, 0)
}

func (s *TargetAsElemContext) Target_name() ITarget_nameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITarget_nameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITarget_nameContext)
}

func (s *TargetAsElemContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.EnterTargetAsElem(s)
	}
}

func (s *TargetAsElemContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.ExitTargetAsElem(s)
	}
}

func (p *TDTLParser) Field_elem_with_as() (localctx IField_elem_with_asContext) {
	localctx = NewField_elem_with_asContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, TDTLParserRULE_field_elem_with_as)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	localctx = NewTargetAsElemContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(67)
		p.expr(0)
	}
	{
		p.SetState(68)
		p.Match(TDTLParserAS)
	}
	{
		p.SetState(69)
		p.Target_name()
	}

	return localctx
}

// IFilterContext is an interface to support dynamic dispatch.
type IFilterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFilterContext differentiates from other interfaces.
	IsFilterContext()
}

type FilterContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFilterContext() *FilterContext {
	var p = new(FilterContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TDTLParserRULE_filter
	return p
}

func (*FilterContext) IsFilterContext() {}

func NewFilterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FilterContext {
	var p = new(FilterContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TDTLParserRULE_filter

	return p
}

func (s *FilterContext) GetParser() antlr.Parser { return s.parser }

func (s *FilterContext) Filter_condition() IFilter_conditionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFilter_conditionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFilter_conditionContext)
}

func (s *FilterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FilterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FilterContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.EnterFilter(s)
	}
}

func (s *FilterContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TDTLListener); ok {
		listenerT.ExitFilter(s)
	}
}

func (p *TDTLParser) Filter() (localctx IFilterContext) {
	localctx = NewFilterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, TDTLParserRULE_filter)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(71)
		p.Filter_condition()
	}

	return localctx
}

// IFilter_conditionContext is an interface to support dynamic dispatch.
type IFilter_conditionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFilter_conditionContext differentiates from other interfaces.
	IsFilter_conditionContext()
}

type Filter_conditionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}
